# sakura

./: .gitignore  CMakeLists.txt  Main.qml  README.md  main.cpp  res.qrc
doc/: 界面设计总章.md
include/: core.h  core.hpp  utils.h  utils.hpp
include/core/: adapter.hpp  driver.hpp  plugin.cpp  project.hpp
include/utils/: Project.h  adapter_manager.hpp
qml/: MainWindow.qml
qml/global/: Allitems.qml  Footitems.qml  Projects.qml  qmldir
qml/pages/: homePage.qml  pluginManager.qml  pluginStore.qml  pluginStore.qml.autosave  projectConsole.qml  projectManager.qml  serverManager.qml
qml/windows/: AboutWindow.qml  MainWindow.qml  NavigationWindow.qml
src/utils/: adapter_manager.cpp
